--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="icon"
               href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
+            {{ ux_controller_link_tags() }}
         {% endblock %}
 
         {% block javascripts %}
@@ -14,10 +15,12 @@
         {% endblock %}
     </head>
     <body>
-        <section class="section">
-            <h1 class="title">
-                Hello World </h1>
-            <p class="subtitle">
+        <section class="section" >
+            <h1 class="title"   >
+                Hello World
+            </h1>
+            <div {{ stimulus_controller('hello') }}></div>
+            <p class="subtitle" >
                 My first website with <strong>Bulma</strong>! </p>
             {% block body %}{% endblock %}
         </section>
